fixed typo: students was misspelled
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1570 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -57,7 +57,7 @@
                     <h3>Teaching Tools</h3>
                     <h5>A useful teaching resource!</h5>
                     <p>Go Botany encourages informal, self-directed education
-                    in botany for science stduents and beginning and amateur
+                    in botany for science students and beginning and amateur
                     botanists. Professors, teachers, and environmental
                     educators can share curricula and teaching ideas.</p>
                     <a class="learn-more" href="#">Learn More</a>
