--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -55,12 +55,8 @@
             src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
         <script src="/static/underscore-min.js"></script>
-        {% include "simplekey/_image_gallery_js.html" %}
-        <!-- Temporarily remove the 'extra' jQuery here for now until
-             all components' problems can be sorted out. jQuery Tools
-             above comes bundled with jQuery 1.4.2, and having both
-             versions around evidently causes tricky conflicts. -->
-        <!--script src="/static/jquery-1.6.2.min.js"></script-->
+        <!-- jQuery Tools also bundles jQuery itself: -->
+        <script src="/static/scripts/jquery.tools.min.js"></script>
         <script src="/static/scripts/jquery.mousewheel.min.js"></script>    
         <script src="/static/scripts/jquery.jscrollpane.min.js"></script>     
         <script src="/static/scripts/global.js"></script>
@@ -76,11 +72,7 @@
         <script
             src="/static/scripts/jquery.smoothDivScroll-1.1-min.js"></script>
 
-
         <!-- This block is for adding any page-specific JS. -->
         {% block js_bottom %}{% endblock %}
     </body>
 </html>
-
-
-
