Gave each level-1 gallery an onclick that visits the currently selected image.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1577 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -41,8 +41,10 @@
                             <div class="img-container">
                                 <div class="images">
                                     {% for image in pilegroup.sample_species_images.all %}
+                                      <a href="{{ image.image.url }}">
                                         <img src="{{ image.image.extra_thumbnails.large.absolute_url }}"
                                             alt="{{ image.alt }}">
+                                      </a>
                                     {% endfor %}
                                 </div>
                             </div>
