--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -41,7 +41,8 @@
                             <div class="img-container">
                                 <div class="images">
                                     {% for image in pilegroup.sample_species_images.all %}
-                                      <a href="{{ image.image.url }}">
+                                      <a href="{{ image.image.url }}"
+                                         rel="shadowbox[{{ pilegroup.slug }}]">
                                         <img src="{{ image.image.extra_thumbnails.large.absolute_url }}"
                                             alt="{{ image.alt }}">
                                       </a>
