--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -10,18 +10,8 @@
             <div class="container">
                 <div id="main">
                     <div id="breadcrumb">
-                        <ul>
-                            <li class="first completed"><a href="{% url simplekey-page 1 %}"><img
-                                src="/static/images/icons/start.png" alt=""> Start</a></li>
-                            <li class="second completed"><a href="{% url simplekey-page 1 %}" title="{{ pilegroup.friendly_title }}"><img
-                                src="/static/images/icons/group.png"
-                                alt=""> {{ pilegroup.friendly_title }}</a></li>
-                            <li class="third current"><a><img
-                                src="/static/images/icons/subgroup.png" alt=""> 
-                                Subgroup</a></li>
-                            <li class="last upcoming"><a><img 
-                                src="/static/images/icons/subgroup.png" alt=""> My Plant</a></li>
-                        </ul>
+                        <p>You are here: <a href="{% url simplekey-page 1 %}">Start</a>
+                        &gt; <span>{{ pilegroup.friendly_title }}</span></p>
                     </div>
                     
                     <h2>Is your plant in one of these subgroups?</h2>
