--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -19,32 +19,17 @@
         <div class="container">
             <div id="main">
                 <div id="breadcrumb">
-                    <ul>
-                        <li class="first completed">
-                        <a href="{% url simplekey-page 1 %}"><img
-                            src="/static/images/icons/start.png" 
-                            alt="">Start</a>
-                        </li>
-                        <li class="second completed">
-                        <a href="{% url simplekey-pilegroup pilegroup.slug %}"
-                            title="{{ pilegroup.friendly_title }}"><img
-                            src="/static/images/icons/group.png" 
-                            alt="">{{ pilegroup.friendly_title }}</a>
-                        </li>
-                        <li class="third completed">
-                        <a id="results-link"
-                            href="{% if last_plant_id_url %}{{ last_plant_id_url }}{% else %}{% url simplekey-pile pilegroup.slug pile.slug %}{% endif %}"
-                            title="{{ pile.friendly_title }}"><img
-                            src="/static/images/icons/subgroup.png" 
-                            alt="">{{ pile.friendly_title }}</a>
-                        </li>
-                        <li class="last current">
-                        <a><img
-                            src="/static/images/icons/subgroup.png"
-                            alt="">{{ scientific_name_short }}</a>
-                        </li>
-                    </ul>
-
+                    <p>You are here: <a href="{% url simplekey-page 1 %}">Start</a>
+                    &gt;
+                    <a href="{% url simplekey-pilegroup pilegroup.slug %}"
+                            >{{ pilegroup.friendly_title }}</a>
+                        &gt; 
+                        <a href="{% if last_plant_id_url %}{{ last_plant_id_url }}{% else %}{% url simplekey-pile pilegroup.slug pile.slug %}{% endif %}"
+                            >{{ pile.friendly_title }}</a>
+                        &gt;
+                        <span>{{ scientific_name|italicize_plant|safe }}
+                           {# If the above is too long, can use scientific_name_short #}
+                        </span></p>
                 </div>
                 
                 <h2>
