Bug fix: Level 3 breadcrumb link on the species page now always points to the correct pile. (Iter. 18, bug item 22.)
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1587 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -24,7 +24,7 @@
                     <a href="{% url simplekey-pilegroup pilegroup.slug %}"
                             >{{ pilegroup.friendly_title }}</a>
                         &gt; 
-                        <a href="{% if last_plant_id_url %}{{ last_plant_id_url }}{% else %}{% url simplekey-pile pilegroup.slug pile.slug %}{% endif %}"
+                        <a href="{% if last_plant_id_url and pile.slug in last_plant_id_url %}{{ last_plant_id_url }}{% else %}{% url simplekey-pile pilegroup.slug pile.slug %}{% endif %}"
                             >{{ pile.friendly_title }}</a>
                         &gt;
                         <span>{{ scientific_name|italicize_plant|safe }}
