User Story 224: we now display the DLD for characters that have them.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1592 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -36,6 +36,7 @@
                         <h4></h4>
                         <div>
                             <div class="info">
+                                <div class="dld"></div>
                                 <div class="hint"></div>
                                 <div class="values"></div>
                                 <div class="actions">
