Switched the "results" page over to _new_base.html and RequireJS to load Dojo.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1593 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -1,8 +1,8 @@
-{% extends "simplekey/_base.html" %}
+{% extends "simplekey/_new_base.html" %}
 
 {% block title %}{{ pilegroup.friendly_title }}: {{ pile.friendly_title }}{% endblock %}
 
-{% block body %}
+{% block body_content %}
     <body id="plant-id-3" class="claro app">
         {% include "simplekey/_header.html" %}
 
@@ -149,11 +149,12 @@
 
         <script>
         {% include "simplekey/partner_site_inline_js.html" %}
-        dojo.require('gobotany.sk.results');
-        dojo.addOnLoad(function() {
-            helper = gobotany.sk.results.ResultsHelper('{{ pile.slug }}');
-            helper.setup();
-        });
         </script>
     </body>
+{% endblock %}
+
+{% block js_require %}
+    require(['simplekey/results'], function(results) {
+        results.go('{{ pile.slug }}');
+    });
 {% endblock %}
