Removed double footer from results page; added code and libs for intro overlay.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1596 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -143,14 +143,14 @@
             </div>
         </div>
 
-        {% include "simplekey/_footer.html" %}
-
-        {% include "simplekey/_script_constants.html" %}
-
         <script>
         {% include "simplekey/partner_site_inline_js.html" %}
         </script>
-    </body>
+
+    <div id="intro-overlay">
+      
+    </div>
+  </body>
 {% endblock %}
 
 {% block js_require %}
