Switch to using existing image creator (photographer) field instead of parsing the filename so credit appears correct on both demo server and sample.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1599 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -48,7 +48,7 @@
 		            <div class="scrollWrapper">
                         <div class="scrollableArea">
                             {% for i in species_images %}
-                                {% with i.image.url|split:"-"|at_index:"-2" as photographer %}
+                                {% with i.creator as photographer %}
                                 <a href="{{ i.image.url }}" {% if forloop.counter == 1 %}id="startimage"{% endif %}
                                     title="{% photo_title_credit i.image_type scientific_name photographer %}">
                                     <img src="{{ i.image.extra_thumbnails.large.absolute_url }}"
