Added a big, obvious instructions overlay to the results page. It shows fake numbers for now until I figure out how to get them from the loaded data.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1604 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -148,13 +148,23 @@
         </script>
 
     <div id="intro-overlay">
-      
+      <div class="number-of-species">
+        <h1>33 species</h1>
+        in this subgroup
+      </div>
+      <div class="number-of-questions">
+        <h1>35 questions</h1>
+        to narrow your search
+      </div>
+      <div class="get-started">
+        <h1>Get started!</h1>
+      </div>
     </div>
   </body>
 {% endblock %}
 
 {% block js_require %}
     require(['simplekey/results'], function(results) {
-        results.go('{{ pile.slug }}');
+        results('{{ pile.slug }}');
     });
 {% endblock %}
