--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -887,7 +887,54 @@ Styles for results page introductory overlay
 #intro-overlay {
     display: none;
     z-index: 10000;
-    background-color: #fff;
+    text-align: center;
+    font-size: 240%;
+}
+#intro-overlay div {
+    position: relative;
+    margin-bottom: 10%;
+    border-radius: 1em;
+    -moz-border-radius: 1em;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 100);
+    -moz-box-shadow: 0px 5px 20px rgba(0, 0, 0, 100);
+    -webkit-box-shadow: 0px 5px 20px rgba(0, 0, 0, 100);
+    background-color: #f0f0c0;
+    padding: 0.5em 1.5em;
+    color: #fff;
+}
+#intro-overlay .number-of-species {
+    background-color: #526612;
+}
+#intro-overlay .number-of-questions {
+    background-color: #0c4636;
+}
+#intro-overlay .get-started {
+    background-color: #631121;
+}
+#intro-overlay h1 {
+    font-weight: bold;
+    font-size: 140%;
+}
+
+/* Arrows */
+
+#intro-overlay .number-of-species:before,
+#intro-overlay .number-of-questions:before  {
+    position: absolute;
+    bottom: 1em;
+    border-style: solid;
+    border-width: 1em 2em;
+    width: 0;
+    height: 0;
+    content: '';
+}
+#intro-overlay .number-of-species:before  {
+    right: -5em;
+    border-color: transparent transparent transparent #526612;
+}
+#intro-overlay .number-of-questions:before  {
+    left: -5em;
+    border-color: transparent #0c4636 transparent transparent;
 }
 
 /***
