--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -1,4 +1,5 @@
 {% extends "simplekey/_new_base.html" %}
+{% load simplekey_extras %}
 
 {% block title %}{{ page.title }}{% endblock %}
 
@@ -24,12 +25,16 @@
                         <div class="frame"></div>
                         <div class="img-container">
                             <div class="images">
-                                {% for image in pilegroup.sample_species_images.all %}
-                                  <a href="{{ image.image.url }}"
-                                     rel="shadowbox[{{ pilegroup.slug }}]">
-                                    <img src="{{ image.image.extra_thumbnails.large.absolute_url }}"
-                                        alt="{{ image.alt }}">
-                                  </a>
+                                {% for i in pilegroup.sample_species_images.all %}
+                                    {% with i.creator as photographer %}
+                                    <a href="{{ i.image.url }}"
+                                        rel="shadowbox[{{ pilegroup.slug }}]"
+                                        title="{% photo_title_credit i.image_type i.content_object.scientific_name photographer %}">
+                                        <img src="{{ i.image.extra_thumbnails.large.absolute_url }}"
+                                            alt="{% photo_title_credit i.image_type i.content_object.scientific_name photographer %}">
+                                    </a>
+                                    {% endwith %}
+
                                 {% endfor %}
                             </div>
                         </div>
